--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       >
 
       <div class="navbar-nav">
-        <a href="#home">Heeeome</a>
+        <a href="#home">Home</a>
         <a href="#about">Tentang Saya</a>
         <a href="pengalaman">Pengalaman</a>
         <a href="contact">Kontak</a>
