--- a/index.html
+++ b/index.html
@@ -21,21 +21,27 @@
   <body>
     <!-- Navbar Start -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo"
-        >Muhammad <span>Aldri</span> <bdi>Saputra</bdi></a
-      >
+      <a href="#" class="navbar-nama">Rumah <span>Aco</span> <bdi>Team</bdi></a>
 
       <div class="navbar-nav">
         <a href="#home">Home</a>
-        <a href="#about">Tentang Saya</a>
-        <a href="pengalaman">Pengalaman</a>
-        <a href="contact">Kontak</a>
+        <a href="#about">About</a>
+        <a href="member">Member</a>
+        <a href="contact">Contct</a>
       </div>
       <div class="navbar-extra">
         <a href="#" id="menu"><i data-feather="menu"></i></a>
       </div>
     </nav>
     <!-- Navbar End -->
+    <!-- Hero Section start -->
+    <section class="hero" id="home">
+      <main class="content">
+        <h1>Weclome To Rumah <span>Aco</span></h1>
+        <a href="#" class="cta">Lihat Anggota</a>
+      </main>
+    </section>
+    <!-- Hero Section end -->
     <!-- Feather Icons -->
     <script>
       feather.replace();
