update about dan member

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <div class="navbar-nav">
         <a href="#home">Home</a>
         <a href="#about">About</a>
-        <a href="member">Member</a>
-        <a href="contact">Contct</a>
+        <a href="#member">Member</a>
+        <a href="#contact">Contact</a>
       </div>
       <div class="navbar-extra">
         <a href="#" id="menu"><i data-feather="menu"></i></a>
@@ -38,10 +38,42 @@
     <section class="hero" id="home">
       <main class="content">
         <h1>Weclome To Rumah <span>Aco</span></h1>
-        <a href="#" class="cta">Lihat Anggota</a>
+        <a href="https://maps.app.goo.gl/5U4qUL7B6s4jFFPz7" class="cta"><i data-feather="map-pin"></i> Home Base</a>
       </main>
     </section>
     <!-- Hero Section end -->
+
+    <!-- About Section start -->
+    <section id="about" class="about">
+      <h2><span>Tentang </span>Kami</h2>
+
+      <div class="row">
+      <div class="about-img">
+        <img src="images/tentang-kami.jpg" alt="Tentang Kami" />
+      </div>
+      <div class="content">
+        <h3>tes aja dulu ini po</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+          optio tenetur, necessitatibus alias soluta nostrum!
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+          facilis, iste animi vero rem eum tempore ipsa quis reiciendis cumque.
+        </p>
+      </div>
+    </section>
+    <!-- About Section end -->
+
+<!-- Member Section start -->
+ <section id="member" class="member">
+   <h2><span>Masih </span> Contoh</h2>
+  <div class="anggota">
+    <a href="https://www.instagram.com/nasrul_114/" class="halamannasrul"><i data-feather="instagram"></i> Instagram Nasrul</a>
+  </div>
+ </section>
+<!-- Member Section end -->
+
     <!-- Feather Icons -->
     <script>
       feather.replace();
