menambahkan member section dan link maps

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Hero Section start -->
     <section class="hero" id="home">
       <main class="content">
-        <h1>Weclome To Rumah <span>Aco</span></h1>
+        <h1>Weclome To <span>RA TEAM</span></h1>
         <a href="https://maps.app.goo.gl/5U4qUL7B6s4jFFPz7" class="cta"><i data-feather="map-pin"></i> Home Base</a>
       </main>
     </section>
@@ -45,11 +45,11 @@
 
     <!-- About Section start -->
     <section id="about" class="about">
-      <h2><span>Tentang </span>Kami</h2>
+      <h2><span>APA  </span>ITU <ra>RA </ra> TIM</h2>
 
       <div class="row">
       <div class="about-img">
-        <img src="images/tentang-kami.jpg" alt="Tentang Kami" />
+        <img src="images/anggota-kami.jpg" alt="Tentang Kami" />
       </div>
       <div class="content">
         <h3>tes aja dulu ini po</h3>
@@ -67,10 +67,28 @@
 
 <!-- Member Section start -->
  <section id="member" class="member">
-   <h2><span>Masih </span> Contoh</h2>
+   <h2><span>Member </span> RA</h2>
+  </section>
+
+  <section id="fotomember" class="fotomember">
   <div class="anggota">
-    <a href="https://www.instagram.com/nasrul_114/" class="halamannasrul"><i data-feather="instagram"></i> Instagram Nasrul</a>
-  </div>
+    <div class="member-img">
+      <a href="images/Aldri-1.jpg" class="fotoaldri">
+        <img src="images/Aldri-1.jpg" alt="aldri">
+      </a>
+        <div class="formaldri">
+        <div>Nama:</div><div>Aldri</div>
+        <div>Usia:</div><div>19th</div> 
+        <div>Gander:</div><div>Pria</div> 
+        <div>Hobi:</div><div>Bernafas</div>
+        </div>
+      </div>
+      <section>
+
+      
+    <!-- </div>
+    <a href="#" class="halamannasrul"></i> Nasrul</a>
+  </div> -->
  </section>
 <!-- Member Section end -->
 
@@ -82,3 +100,5 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
+
